tests/compile_fail/state/no_enter_def.stderr
error: a struct with fields must manually implement the `Substate::enter` function
  --> tests/compile_fail/state/no_enter_def.rs:17:10
   |
17 |     impl Substate<Top> for Bottom {}
   |          ^^^^^^^^
